Feat: Assign default USER role on registration (Issue #39)
Update AuthService to assign ROLE_USER to new users. Update User entity's getAuthorities method to correctly return the user's role to Spring Security. Refs #39